<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/toolbarBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:contentDescription="@string/empty_string" />

        <ImageView
            android:id="@+id/btnReturn"
            android:contentDescription="@string/addon_return"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="6dp"
            android:text="@string/user_setting_title"
            android:textColor="@color/TEXT_black"
            android:fontFamily="@font/wqy_12px"
            android:textSize="28dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnCancel"
            android:contentDescription="@string/addon_cancel"
            android:layout_width="144dp"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/bottomSpacer"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1.0"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/btnConfirm"
            android:contentDescription="@string/addon_confirm"
            android:layout_width="144dp"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <ImageView
        android:id="@+id/contentBg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/bottomBar"
        android:layout_below="@id/topToolbar"
        android:scaleType="fitXY"
        android:contentDescription="@string/empty_string" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/user_setting_placeholder"
        android:textColor="@color/TEXT_black"
        android:fontFamily="@font/wqy_12px"
        android:textSize="20dp" />

</RelativeLayout>
