<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/toolbarBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:contentDescription="@string/empty_string" />

        <ImageView
            android:id="@+id/btnReturn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/click_background"
            android:contentDescription="@string/addon_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="6dp"
            android:text="@string/quest_view_title"
            android:textColor="@color/TEXT_black"
            android:fontFamily="@font/wqy_12px"
            android:textSize="28dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contentPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/topToolbar"
        android:layout_above="@id/bottomBar"
        android:layout_marginTop="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/weekStrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <com.archite.piecesoflife.ui.ThreeColorProgressBar
            android:id="@+id/weekProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/empty_string" />

        <ScrollView
            android:id="@+id/listScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none"
            android:paddingTop="6dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:id="@+id/listContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnPrevWeek"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/quest_view_prev_week" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnThisWeek"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/quest_view_reset_week" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnNextWeek"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/quest_view_next_week" />
    </LinearLayout>

</RelativeLayout>
